@@ -62,3 +62,22 @@
   written out to disk when saved..... (37).
 - Page up and page down do not work the same way as Pico (# of lines). (38)
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
